--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-
-    </main>
+    <div class="main"></div>
+        <div class="box"></div>  
+    </div>
 </body>
 </html>
