--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <div class="main"></div>
-        <div class="box"></div>  
+        <nav style="background-color: red;">
+            <span><img width="100" src="assets/images/logo.svg" alt=""></span>
+            <div>
+                <button>English</button>
+                <button>Sign In</button>
+            </div>
+        </nav>
+        <div class="box">
+
+        </div>  
     </div>
 </body>
 </html>
