--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
             <span>Enjoy big movies, hit series and more from  ₹ 149.</span>
             <span> Join today. Cancel anytime.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
-        
+            <div>
+                <input type="text" placeholder="Email Address">
+                <button>Get Started</button>
             </div>
+        </div>
+
+        <div class="seperation"></div>
         
     </div>
 </body>
