--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav style="background-color: red;">
             <span><img width="100" src="assets/images/logo.svg" alt=""></span>
             <div>
-                <button>English</button>
-                <button>Sign In</button>
+                <button class="btn">English</button>
+                <button class="btn btn-red-sm">Sign In</button>
             </div>
         </nav>
         <div class="box">
@@ -24,7 +24,7 @@
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div>
                 <input type="text" placeholder="Email Address">
-                <button>Get Started</button>
+                <button class="btn btn-red">Get Started</button>
             </div>
         </div>
 
