--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Netflix India - Watch TV Shoes Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
             <span>Enjoy big movies, hit series and more from  ₹ 149.</span>
             <span> Join today. Cancel anytime.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
-            <div>
+            <div class="hero-buttons">
                 <input type="text" placeholder="Email Address">
                 <button class="btn btn-red">Get Started</button>
             </div>
