--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="hero-buttons">
                 <input type="text" placeholder="Email Address">
-                <button class="btn btn-red">Get Started</button>
+                <button class="btn btn-red">Get Started &gt;</button>
             </div>
         </div>
 
