--- a/index.html
+++ b/index.html
@@ -31,5 +31,17 @@
         <div class="seperation"></div>
         
     </div>
+
+    <section class="first">
+        <div>
+            Enjoy on your TV
+            Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
+        </div>
+
+        <div class="secImg">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
+            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"></video>
+        </div>
+    </section>
 </body>
 </html>
