--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
     <section class="first">
         <div>
-            Enjoy on your TV
-            Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
+            <span>Enjoy on your TV</span>
+            <span>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</span>
         </div>
 
         <div class="secImg">
