--- a/index.html
+++ b/index.html
@@ -80,5 +80,16 @@
             <span>Send children on adventures with their favourite characters in a space made just for them-free with your membership.</span>
         </div>
     </section>
+
+    <div class="seperation"></div>
+    <section class="faq">
+        <h2>Frequently Asked Questions</h2>
+        <div class="faqbox">
+            <span>What is Netflix?</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
+                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+        </div>
+    </section>
 </body>
 </html>
