--- a/index.html
+++ b/index.html
@@ -126,5 +126,48 @@
             </svg>
         </div>
     </section>
+
+    <div class="seperation"></div>
+
+    <footer>
+        <div class="questions">
+            Questions? Call 000-800-919-1694
+        </div>
+        <div class="footer">
+            <div class="footer-item">
+                <a href="faq">FAQ</a>
+                <a href="faq">Investor Relations</a>
+                <a href="faq">Privacy</a>
+                <a href="faq">Speed Test</a>
+                <a href="faq">FAQ</a>
+            </div>
+
+            </div class="footer-item">
+
+            <div>
+                <a href="faq">Help Centre</a>
+                <a href="faq">Jobs</a>
+                <a href="faq">Cookie Preferences</a>
+                <a href="faq">Legal Notices</a>
+                <a href="faq">FAQ</a>
+            </div>
+
+            <div class="footer-item">
+                <a href="faq">Account</a>
+                <a href="faq">Ways to Watch</a>
+                <a href="faq">Corporate Information</a>
+                <a href="faq">Only on Netflix</a>
+                <a href="faq">FAQ</a>
+            </div class="footer-item">
+
+            <div>
+                <a href="faq">Media Centre</a>
+                <a href="faq">Terms of Use</a>
+                <a href="faq">Contact Us</a>
+                <a href="faq">FAQ</a>
+                <a href="faq">FAQ</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
